--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
   "author": "Peter Cunha",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "bootstrap": "^3.3.7",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
     "imports-loader": "^0.7",
     "less": "^2.7.2",
-    "less-loader": "^2.2.3",
-    "react": "^15.4",
-    "react-dom": "^15.4.2",
-    "style-loader": "^0.13",
+    "less-loader": "^4.0.5",
+    "react": "^15.6",
+    "react-dom": "^15.6.1",
+    "style-loader": "^0.18",
     "url-loader": "^0.5",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "^3.4.2"
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1",
+    "write-file-webpack-plugin": "^4.1.0"
   },
   "name": "react-bootstrap-webpack-boilerplate",
   "description": "Start any web project with ease by using this React, Webpack, Bootstrap, and Babel boilerplate!",
@@ -43,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/petercunha/react-bootstrap-webpack-Boilerplate/issues"
   },
-  "homepage": "https://github.com/petercunha/react-bootstrap-webpack-Boilerplate"
+  "homepage": "https://github.com/petercunha/react-bootstrap-webpack-Boilerplate",
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
